added images tag to favicon

--- a/a.html
+++ b/a.html
@@ -2,7 +2,7 @@
 <head>
     <title>Certificate</title>
     <link rel="stylesheet" href="a.css">
-    <link rel="icon" href="favicon.png">
+    <link rel="icon" href="images/favicon.png">
 </head>
 <body>
     <a href="images/git crash course-1.jpg">
